--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ### Deno ###
 /.idea/
-/.vscode/
-/node_modules/
+/backend/.vscode/
+/backend/node_modules/
 
 # User-specific stuff
 .idea/**/workspace.xml
