--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "reflect-metadata": "^0.2.1"
+    "pg-hstore": "^2.3.4"
   }
 }
