--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,21 @@
 /backend/node_modules/
 /backend/info
 
+## Frontend ##
+/frontend/node_modules
+/frontend/.pnp
+/frontend/.pnp.js
+/frontend/coverage
+/frontend/build
+/frontend/.DS_Store
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
+
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
