--- a/backend/deno.json
+++ b/backend/deno.json
@@ -2,5 +2,8 @@
     "compilerOptions": {
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true
+    },
+    "imports": {
+        "@oak/oak": "jsr:@oak/oak@^17.1.3"
     }
 }
