--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,15 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
+    "retry-as-promised": "^7.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "env-cmd -f .env.dev react-scripts start"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
