--- a/backend/deno.json
+++ b/backend/deno.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "emitDecoratorMetadata": true,
+        "strictPropertyInitialization": false
     },
     "imports": {
         "@oak/oak": "jsr:@oak/oak@^17.1.3"
