--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
+    "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.9.0",
@@ -46,11 +47,14 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "customize-cra": "^1.0.0",
     "customize-cra-less-loader": "^2.0.0",
     "env-cmd": "^10.1.0",
     "less": "^4.2.1",
     "less-loader": "^12.2.0",
-    "react-app-rewired": "^2.2.1"
+    "postcss": "^8.4.49",
+    "react-app-rewired": "^2.2.1",
+    "tailwindcss": "^3.4.17"
   }
 }
