--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.20",
     "customize-cra": "^1.0.0",
     "customize-cra-less-loader": "^2.0.0",
